--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>BUAT GINA</title>
+    <title>BUAT KAMU</title>
 </head>
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>a</span>
-        <span>i</span>
-        <span>i</span>
-        <span>,</span>
-        <span>G</span>
+        <span>l</span>
+        <span>l</span>
+        <span>o</span>
+        <span>D</span>
         <span>i</span>
         <span>n</span>
+        <span>d</span>
         <span>a</span>
-        <span>❤</span>
     </div>
     
     <div class="description">
-        <span>AKU PUNYA SESUATU BUAT KAMU, BIAR TAMBAH SEMANGAT NGERJAIN TUGAS NYA🤞😉</span>
+        <span>NIH BUAT KAMU, BIAR TAMBAH SEMANGAT NGERJAIN TUGAS NYA😉</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">KLIK DISINI GINA</a>
+            <a href="flower.html">KLIK DISINI YA</a>
         </button>
         
     </div>
